--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,22 +117,23 @@ main {
    width: 90%;
    margin: 20px auto;
 }
-#reasons > h2 {
+#reasons h2 {
     font-size: 280%;
     padding-bottom: 20px;
-    text-transform: uppercase;
     text-align: center;
 } 
 #benefits-physical > div, #benefits-mental > div {
     line-height: 20px;
-    margin: 20px;
+    margin-bottom: 20px;
 
 }
-#benefits-physical > p, #benefits-mental > p {
+#benefits p {
+    padding: 0 20px;
+}
+ 
+#benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
-    padding: 0 20px;
-
 }
 
 /* Footer */
