--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,15 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+    
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -259,7 +268,10 @@ main {
         align-self: flex-end;
     }
 
-
+/* Gallery */
+#photos {
+    column-count: 3;
+}
 
 }
 /* Media query: Large devices (Laptops and desktops (992px and up) */
@@ -267,6 +279,11 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
+/* Gallery */
+#photos {
+column-count: 4;
+        }
 }
 
 
