--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,8 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -184,6 +186,53 @@ main {
 }
 #photos {
     line-height: 0;
+}
+
+/* Sign-up form */
+#signup {
+    background: url(../images/signup-image.webp);
+    background-size: cover;
+    background-position: 75%;
+    flex-grow: 1;
+    padding: 20px 10px;
+}
+
+#signup-form h2 {
+    color: #fafafa;
+    padding-bottom: 20px;
+    }
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+    
+}
+
+.text-input {
+    background-color: transparent;
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    margin: 5px 0 20px 0;
+    width: 100%;
+    height: 25px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.join-button {
+    border-radius: 2px;
+    background-color: #454b1b;
+    color: #fafafa;
+    font-size: 100%;
+    padding: 15px 32px;
+    margin-top: 20px;
 }
 
 /* Footer */
